--- a/docs/guidance/2026-02-04.md
+++ b/docs/guidance/2026-02-04.md
@@ -41,3 +41,9 @@ def get_hyper_simulation_trace(self) -> list[Event]:
 - 例如 `logs/hotpotqa/qa_failed | short | contra_groundtruth/{query_id}/`
 
 
+---
+
+## #3 修改RAG的评分
+目前来说 Exact Match 和 F1 都不太可用。但是Match 又分不出差异性。
+我目前添加了`hotpotqa`, `musique` 和 `multihop` 三个测试集。他们的答案部分各不一致。你可以根据他们不同的结构来设计不同的评分函数。
+例如精准匹配，或者是多答案匹配，或者用`thefuzz`来做模糊匹配。
